--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "get-audio-duration": "^4.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vtt-creator": "^1.1.1"
   }
 }
