--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@samvera/clover-iiif": "^2.16.10",
     "audiomotion-analyzer": "^4.4.0",
     "next": "14.1.2",
     "react": "^18",
